--- a/src/assets/css/_section.sass
+++ b/src/assets/css/_section.sass
@@ -32,7 +32,10 @@
   &_price
     padding-top: 130px
     background: url("../images/screen-price.png") no-repeat 50% 0%
-    background-size: contain
+    background-size: cover
 
   &_contacts
     padding-top: 130px
+    padding-bottom: 0
+    background: url("../images/screen-contacts.png") no-repeat 50% 0%
+    background-size: contain
