--- a/src/assets/css/_slider.sass
+++ b/src/assets/css/_slider.sass
@@ -1,11 +1,21 @@
 .product-slider
 
   &__item
-    width: 312px
+    
     margin: 20px 30px
     -webkit-box-shadow: 3px 3px 8px 0px rgba(0,0,0,0.5)
     -moz-box-shadow: 3px 3px 8px 0px rgba(0,0,0,0.5)
     box-shadow: 3px 3px 8px 0px rgba(0,0,0,0.5)
+
+    @include tablet
+      margin: 20px 15px
+
+    @incude mobile
+      margin: 20px 5px
+
+    img
+      @include mobile
+        width: 100%
 
 .slide-arrow
   background-color: transparent
@@ -21,19 +31,27 @@
   &:focus
     outline: none
 
-.next-arrow
+.VueCarousel-navigation-button 
+  color: transparent!important
+  width: 38px
+  height: 76px
+
+  @include mobile
+    width: 20px
+
+.VueCarousel-navigation-prev
   background: url("../images/arrow-left.png") no-repeat 50% 50%
   background-size: contain
   left: -30px
 
   @include mobile
-    left: -12px
+    left: 8px!important
 
-.prev-arrow
+.VueCarousel-navigation-next
   background: url("../images/arrow-right.png") no-repeat 50% 50%
   background-size: contain
   right: -30px
 
   @include mobile
-    right: -12px
+    right: 8px!important
 
