--- a/src/assets/css/_default.sass
+++ b/src/assets/css/_default.sass
@@ -7,13 +7,9 @@ body
   height: 100%
 
 // press down footer
-.wrapper
-  display: flex
-  flex-direction: column
-  height: 100%
-
-.section_news
+.content-wrapper
   flex: 1 0 auto
+ 
 
 .footer
   flex: 0 0 auto
@@ -56,6 +52,16 @@ body
 
   @include tablet
     font-size: 16px
+
+.show-mobile
+  display: none
+
+  @include mobile
+    display: block
+
+.hidden-mobile
+  @include mobile
+    display: none
 
 // placeholder
 \::-webkit-input-placeholder
