--- a/src/assets/css/_form.sass
+++ b/src/assets/css/_form.sass
@@ -29,6 +29,9 @@
       &:hover
         background-color: $greenHover
 
+  .error
+    position: absolute
+
 .invalid-feedback,
 .alert-danger-custom
   position: absolute
