fix top menu and styles for login and registration modal form

--- a/src/assets/css/_menu-top.sass
+++ b/src/assets/css/_menu-top.sass
@@ -7,10 +7,10 @@
     padding: 0
     margin: 0
     list-style-type: none
-    text-align: right
+    text-align: center
 
-    &_reg
-      margin-bottom: 17px
+    &_auth
+      text-align: right
 
     @include tablet
       text-align: left
