--- a/src/assets/css/_modal.sass
+++ b/src/assets/css/_modal.sass
@@ -11,3 +11,6 @@
 
 .modal_grey .modal-content
   background-color: rgba(229, 229, 229, 0.9)
+
+.form-block
+  background-color: rgba(255, 255, 255, 0.5)
