--- a/src/assets/css/_menu-top.sass
+++ b/src/assets/css/_menu-top.sass
@@ -25,7 +25,7 @@
       margin: 0
       padding: 5px 20px
 
-    &:after
+    &::after
       content: ''
       position: absolute
       width: 6px
@@ -37,13 +37,12 @@
       right: -20px
 
       @include tablet
-      display: none
+        display: none
 
     &:first-child
       margin-left: 0
 
-    &_last
-      margin-right: 50px
+    &:last-child
       &:after
         display: none
 
