--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -177,7 +177,7 @@ input:focus:-ms-input-placeholder {
   }
 }
 
-.menu__item:after {
+.menu__item::after {
   content: '';
   position: absolute;
   width: 6px;
@@ -188,23 +188,24 @@ input:focus:-ms-input-placeholder {
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
   right: -20px;
-  display: none;
+}
+
+@media (max-width: 991px) {
+  .menu__item::after {
+    display: none;
+  }
 }
 
 .menu__item:first-child {
   margin-left: 0;
 }
 
-.menu__item_last {
-  margin-right: 50px;
-}
-
-.menu__item_last:after {
+.menu__item:last-child:after {
   display: none;
 }
 
 @media (max-width: 991px) {
-  .menu__item_last {
+  .menu__item:last-child {
     margin: 0;
   }
 }
