add profile page

--- a/src/assets/css/_default.sass
+++ b/src/assets/css/_default.sass
@@ -84,3 +84,7 @@ input:focus:-moz-placeholder
   color: transparent
 input:focus:-ms-input-placeholder
   color: transparent
+
+.no-gutter > [class*='col-']
+  padding-right: 0
+  padding-left: 0
