--- a/src/assets/css/_section.sass
+++ b/src/assets/css/_section.sass
@@ -19,7 +19,7 @@
     background-size: cover
 
   &_registration
-    padding-top: 140px
+    padding-top: 130px
     background: url("../images/screen-reg.png") no-repeat 50% 50%
     background-size: cover
 
@@ -39,3 +39,9 @@
     padding-bottom: 0
     background: url("../images/screen-contacts.png") no-repeat 50% 0%
     background-size: contain
+
+  &_profile
+    padding-top: 90px
+    padding-bottom: 0
+    background: url("../images/screen-profile.png") no-repeat 50% 0%
+    background-size: cover
