add change menu's buttons

--- a/src/assets/css/_profile.sass
+++ b/src/assets/css/_profile.sass
@@ -1,3 +1,18 @@
+.profile
+
+  &__content-section
+    position: relative
+    height: 100%
+
+  &__content
+    position: absolute
+    width: 80%
+    top: 50%
+    left: 50%
+    transform: translate(-50%, -50%)
+    background-color: rgba(255, 255, 255, 0.5)
+    padding: 20px
+
 .nav-profile
   background-color: rgba(163, 150, 129, 0.7)
   padding: 30px 0
