--- a/src/assets/css/_profile.sass
+++ b/src/assets/css/_profile.sass
@@ -5,11 +5,12 @@
     height: 100%
 
   &__content
-    position: absolute
-    width: 80%
-    top: 50%
-    left: 50%
-    transform: translate(-50%, -50%)
+    //position: absolute
+    width: 90%
+    margin: auto
+    //top: 50%
+    //left: 50%
+    //transform: translate(-50%, -50%)
     background-color: rgba(255, 255, 255, 0.5)
     padding: 20px
 
