add some styles

--- a/src/assets/css/_button.sass
+++ b/src/assets/css/_button.sass
@@ -26,6 +26,22 @@
     &:hover
       background-color: $greenHover
 
+  &_add
+    display: inline-block
+    background-color: #c0986c
+    margin-top: 20px
+    padding: 10px 30px
+    color: $white
+    text-align: center
+    font-family: $bold
+    font-size: 20px
+    text-decoration: none
+
+    &:hover
+      color: $white
+      text-decoration: none
+      background-color: darken(#c0986c, 10%)
+
   &__header
     padding: 7px 20px
     background-color: rgba(255,255,255,0.5)
