--- a/src/assets/css/_form.sass
+++ b/src/assets/css/_form.sass
@@ -10,6 +10,13 @@
     position: relative
     margin: 35px 0
 
+    span
+      padding-right: 15px
+
+      label
+        padding-left: 5px
+        margin-bottom: 0
+
   &__btn
     display: block
     width: 100%
