--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -740,6 +740,11 @@ input:focus:-ms-input-placeholder {
   border: none;
 }
 
+.select {
+  width: 100%;
+  height: 47px;
+}
+
 .form {
   padding-top: 20px;
 }
