created page for add new order

--- a/src/assets/css/_form.sass
+++ b/src/assets/css/_form.sass
@@ -48,3 +48,16 @@
   position: absolute
   top: -25px
   font-style: italic
+
+.label-file
+  cursor: pointer
+  display: block
+  background: url("../images/file.png") no-repeat 0% 50%
+  background-size: contain
+  padding-left: 35px
+  margin-bottom: 10px
+
+.input-file
+  opacity: 0
+  position: absolute
+  z-index: -1
