--- a/src/assets/css/_section.sass
+++ b/src/assets/css/_section.sass
@@ -1,5 +1,6 @@
 .section
   padding: 60px 0
+  height: 100%
 
   &_intro
     padding-top: 130px
@@ -19,20 +20,24 @@
     background-size: cover
 
   &_registration
+    height: 100%
     padding-top: 130px
     background: url("../images/screen-reg.png") no-repeat 50% 50%
     background-size: cover
+    background-attachment: fixed
 
   &_news
     padding-top: 130px
     background: url("../images/screen-news.png") no-repeat 50% 0%
-    background-size: contain
+    background-size: cover
+    background-attachment: fixed
 
   
   &_price
     padding-top: 130px
     background: url("../images/screen-price.png") no-repeat 50% 0%
     background-size: cover
+    background-attachment: fixed
 
   &_contacts
     padding-top: 130px
