--- a/src/assets/css/_section.sass
+++ b/src/assets/css/_section.sass
@@ -50,3 +50,4 @@
     padding-bottom: 0
     background: url("../images/screen-profile.png") no-repeat 50% 0%
     background-size: cover
+    background-attachment: fixed
