--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -414,6 +414,7 @@ input:focus:-ms-input-placeholder {
   padding-bottom: 0;
   background: url("../images/screen-profile.png") no-repeat 50% 0%;
   background-size: cover;
+  background-attachment: fixed;
 }
 
 .text-block {
@@ -535,6 +536,10 @@ input:focus:-ms-input-placeholder {
 }
 
 .button {
+  color: #fff;
+  padding: 10px 30px;
+  text-align: center;
+  font-family: "DroidSansBold";
   cursor: pointer;
   -webkit-transition: all 300ms ease-in-out;
   transition: all 300ms ease-in-out;
@@ -542,12 +547,8 @@ input:focus:-ms-input-placeholder {
 
 .button_order {
   background-color: #779453;
-  color: #fff;
   text-transform: uppercase;
   margin: 20px auto 0;
-  padding: 10px 30px;
-  text-align: center;
-  font-family: "DroidSansBold";
   font-size: 24px;
 }
 
@@ -574,11 +575,7 @@ input:focus:-ms-input-placeholder {
   display: inline-block;
   background-color: #c0986c;
   margin-top: 20px;
-  padding: 10px 30px;
-  color: #fff;
-  text-align: center;
-  font-family: "DroidSansBold";
-  font-size: 20px;
+  font-size: 16px;
   text-decoration: none;
 }
 
@@ -586,6 +583,14 @@ input:focus:-ms-input-placeholder {
   color: #fff;
   text-decoration: none;
   background-color: #ae7f4b;
+}
+
+.button_registration {
+  background-color: #779453;
+}
+
+.button_registration:hover {
+  background-color: #92af6f;
 }
 
 .button__header {
@@ -618,8 +623,20 @@ input:focus:-ms-input-placeholder {
   }
 }
 
+.button__header_name {
+  cursor: inherit;
+}
+
+.button__header_name:hover {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
 .close:focus {
   outline: none;
+}
+
+.buttons-list {
+  margin-top: 25px;
 }
 
 .client {
@@ -1027,7 +1044,6 @@ input:focus:-ms-input-placeholder {
 }
 
 .nav-profile {
-  height: 100%;
   background-color: rgba(163, 150, 129, 0.7);
   padding: 30px 0;
 }
@@ -1106,12 +1122,8 @@ input:focus:-ms-input-placeholder {
 .checkout__add-button-block {
   position: relative;
   width: 300px;
-  background-color: #c0986c;
-  padding: 10px 30px;
-  color: #fff;
   margin: auto;
   text-align: center;
-  cursor: pointer !important;
 }
 
 .checkout__add-list {
@@ -1137,4 +1149,3 @@ input:focus:-ms-input-placeholder {
 .checkout__add-list li:hover {
   background-color: #e6e6e6;
 }
-/*# sourceMappingURL=main.css.map */
