add text on main page. create page Archive

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -815,7 +815,7 @@ input:focus:-ms-input-placeholder {
   cursor: pointer;
   display: block;
   background: url("../images/file.png") no-repeat 0% 50%;
-  background-size: contain;
+  background-size: 25px;
   padding-left: 35px;
   margin-bottom: 10px;
 }
