--- a/src/assets/css/_form.sass
+++ b/src/assets/css/_form.sass
@@ -53,7 +53,7 @@
   cursor: pointer
   display: block
   background: url("../images/file.png") no-repeat 0% 50%
-  background-size: contain
+  background-size: 25px
   padding-left: 35px
   margin-bottom: 10px
 
