--- a/src/assets/css/_button.sass
+++ b/src/assets/css/_button.sass
@@ -4,7 +4,12 @@
   text-align: center
   font-family: $bold
   cursor: pointer
+  border: transparent
   @include transition
+
+  a 
+    color: #fff
+    text-decoration: none
 
   &_order
     background-color: $green
