--- a/src/assets/css/_checkout.sass
+++ b/src/assets/css/_checkout.sass
@@ -1,9 +1,16 @@
-.checkout
+.boxInfo
 
   &__item
     background: #fff
     margin-bottom: 10px
     padding: 5px 15px
+
+  &__name
+    font-size: 18px
+    font-weight: bold
+
+  &__submit
+    font-size: 14px
 
   &__add-button-block
     position: relative
