--- a/src/assets/css/_button.sass
+++ b/src/assets/css/_button.sass
@@ -75,6 +75,17 @@
       &:hover
         background-color: rgba(255,255,255,0.5)
 
+  &_brown
+    display: inline-block
+    background-color: #c0986c
+    font-size: 16px
+    text-decoration: none
+
+    &:hover
+      color: $white
+      text-decoration: none
+      background-color: darken(#c0986c, 10%)
+
 .close
   &:focus
     outline: none
