--- a/src/assets/css/_header.sass
+++ b/src/assets/css/_header.sass
@@ -5,6 +5,7 @@
   background: linear-gradient(to right, #f3f4f5, rgba(255, 255, 255, 0.4))
 
   &__logo
+    display: block
     width: 114px
     height: 70px
     background: url("../images/logo.png") no-repeat 50% 50%
