add page order-details

--- a/src/assets/css/_button.sass
+++ b/src/assets/css/_button.sass
@@ -11,6 +11,12 @@
     color: #fff
     text-decoration: none
 
+  &_hidden
+    display: none
+
+  &.show
+    display: block 
+
   &_order
     background-color: $green
     text-transform: uppercase
@@ -18,7 +24,7 @@
     font-size: 24px
 
     @include tablet
-      font-size: 18px
+      font-size: 16px
 
     &_nm
       margin: 0
