--- a/src/assets/css/_profile.sass
+++ b/src/assets/css/_profile.sass
@@ -15,12 +15,17 @@
     padding: 20px
 
 .nav-profile
+  height: 100%
   background-color: rgba(163, 150, 129, 0.7)
   padding: 30px 0
 
   ul
+    margin: 0
     padding: 0
     list-style-type: none
+
+    @include mobile
+      text-align: center
 
   li
     
@@ -35,3 +40,10 @@
 
     &:hover
       text-decoration: none
+
+    @include tablet
+      padding-left: 20px
+      font-size: 16px
+
+    @include mobile
+      padding: 10px
